fix virginia tech logo contrast issues

--- a/assets/css/projects.css
+++ b/assets/css/projects.css
@@ -484,7 +484,7 @@
 }
 
 .page-project .vt-maroon {
-  color: #88032F !important;
+  color: #fd0e3a !important;
   font-weight: bold !important;
 }
 
